got the showcase section starting to get hashed out okay, figured out i was using start instead of flex-start which was causing my overflow issues, so corrected that in a few places

--- a/client/src/CSS/Home/Nav.css
+++ b/client/src/CSS/Home/Nav.css
@@ -9,6 +9,7 @@
     padding: 1% 2% 1% 2%;
     background-image: url("../../assets/textures/worms.svg");
     background-color: #e16a8b;
+    margin-top: 2%;
 }
 
 
