--- a/client/src/CSS/_Pages/Personal.css
+++ b/client/src/CSS/_Pages/Personal.css
@@ -5,6 +5,7 @@
     align-items: start;
     justify-content: space-evenly;
     padding-left: 2%;
+    margin-top: 1%;
 }
 
 .Personal__intro {
