--- a/client/src/CSS/_Pages/Work.css
+++ b/client/src/CSS/_Pages/Work.css
@@ -2,9 +2,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-evenly;
     padding-left: 2%;
+    margin-top: 1%;
 }
 
 .Work__intro {
